--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,8 @@
     <string name="app_name">Ctrain</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="menu_scan">SCAN</string>
+    <string name="menu_stop">STOP</string>
+    <string name="menu_refresh">Refresh</string>
 
 </resources>
