--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,5 +7,14 @@
     <string name="menu_scan">SCAN</string>
     <string name="menu_stop">STOP</string>
     <string name="menu_refresh">Refresh</string>
+    <string name="terminal">端末台数：</string>
+    <string name="latitude">緯度：</string>
+    <string name="longitude">経度：</string>
+    <string name="line">路線：</string>
+    <string name="crowdrate">crowdrate</string>
+    <string name="lineimage">lineimage</string>
+    <string name="icon">icon</string>
+    
+    <string name="initial">0</string>
 
 </resources>
